--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-community-recommendation
 tensorflow>=1.8.0
 scipy>=1.1.0
 sh>=1.12.14
 numpy>=1.14.3
-sklearn>=0.19.1
+scikit-learn>=0.19.1
 pandas>=0.22.0
